# koltrast

./: .gitignore  CMakeLists.txt  LICENSE  install.sh  main.cpp  todo.txt
examples/: CMakeLists.txt
examples/bob/: CMakeLists.txt  main.cpp
examples/cubemap/: CMakeLists.txt  main.cpp
examples/mesh/: CMakeLists.txt  main.cpp
examples/triangle/: CMakeLists.txt  main.cpp
examples/x11/: CMakeLists.txt  main.cpp  window.hpp
src/: buffer3.hpp  camera.hpp  check.hpp  color.hpp  counting_iterator.hpp  depth_buffer.hpp  elementwise.hpp  image.hpp  light.hpp  linalg.hpp  main.cpp  math.hpp  matrix.hpp  obj.hpp  rasterizer.cpp  rasterizer.hpp  renderer.hpp  shader.hpp  texture.cpp  texture.hpp  transform.hpp  types.hpp  vector.hpp
tests/: CMakeLists.txt  matrix.cpp  test.cpp  vector.cpp
